--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,3 +2,6 @@ name = "imageai"
 main = "worker.js"
 compatibility_date = "2024-05-29"
 compatibility_flags = ["nodejs_compat"]
+
+[ai]
+binding = "AI"
